@@ -1,5 +1,5 @@
 // L2TPNS Global Stuff
-// $Id: l2tpns.h,v 1.97 2005-11-04 14:41:50 bodea Exp $
+// $Id: l2tpns.h,v 1.98 2005-11-14 08:38:02 bodea Exp $
 
 #ifndef __L2TPNS_H__
 #define __L2TPNS_H__
@@ -15,7 +15,7 @@
 #include <sys/types.h>
 #include <libcli.h>
 
-#define VERSION	"2.1.10"
+#define VERSION	"2.1.11"
 
 // Limits
 #define MAXTUNNEL	500		// could be up to 65535
